--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,63 +1,65 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>SP</title>
-<%= stylesheet_link_tag "web-app-theme/base", "web-app-theme/themes/default/style", "web-app-theme/override", :cache => true %>
-   <%#= javascript_include_tag :defaults, :cache => true %>
-   <%= javascript_include_tag "application" %>
-  <%= csrf_meta_tag %>
-<body>
-  <div id="container">
-        <body class="<%= controller.controller_name %>">
+  <head>
+    <title>SP</title>
+    <%= stylesheet_link_tag "web-app-theme/base", "web-app-theme/themes/default/style", "web-app-theme/override", :cache => true %>
+<%#= javascript_include_tag :defaults, :cache => true %>
+    <%= javascript_include_tag "application" %>
+    <%= csrf_meta_tag %>
+  <body>
+    <div id="container">
+      <body class="<%= controller.controller_name %>">
 
-<div id="banner">
-<%= image_tag("shi-logo-3.png") %>
-</div>
-
-    <div id="header">
-      <h1><%= image_tag("shikshan-logo.png") %></h1>
-      <div id="user-navigation">
-        <ul class="wat-cf">
-           <% if current_user.present? %>
-              <li><%= link_to "sign out",  destroy_user_session_path(), :method => :delete %></li>
-            <li><%=  link_to "categories", new_category_path() %></li>
-            <li><%= link_to "carts",  new_cart_path() %></li>
-            <li><%= link_to "products",  new_product_path() %></li>
-            <li><%= link_to "orders", new_order_path() %></li> 
-        <% else %>
-            <li><%= link_to"store", store_index_path()  %>
-            <li><%= link_to "Sign up", new_user_registration_path() %></li>
-            <li><%= link_to "sign_in", new_user_session_path() %></li>
-            <li><%= link_to "confirmation",  new_user_confirmation_path() %></li>
-            <li><%= link_to "students",  new_student_path() %></li>
-        <% end %>
-
-        </ul>
-      </div>
-      <div id="main-navigation">
-        <ul class="wat-cf"></ul>
-      </div>
-    </div>    
-    <div id="wrapper" class="wat-cf">
-      <div class="flash">
-        <% flash.each do |type, message| -%>
-          <div class="message <%= type %>">
-            <p><%= message %></p>
-          </div>
-        <% end -%>
-      </div>
-      <div id="main">
-        <%= yield %>
-        <div id="footer">
-          <div class="block">
-            <p>Copyright &copy; <%= Time.now.year %> Web App.</p>
-          </div>      
+        <div id="banner">
+          <%= image_tag("shi-logo-3.png") %>
         </div>
-      </div>
-      <div id="sidebar">
-        <%= yield :sidebar %>
-      </div>
-    </div>    
-  </div>
-</body>
+
+        <div id="header">
+          <h1><%= image_tag("shikshan-logo.png") %></h1>
+          <div id="user-navigation">
+            <ul class="wat-cf">
+              <% if current_user.present? %>
+                <li><%= link_to "sign out",  destroy_user_session_path(), :method => :delete %></li>
+                <li><%=  link_to "categories", new_category_path() %></li>
+                <li><%= link_to "carts",  new_cart_path() %></li>
+                <li><%= link_to "products",  new_product_path() %></li>
+                <li><%= link_to "orders", new_order_path() %></li> 
+              <% else %>
+                <li><%= link_to"store", store_index_path()  %>
+                <li><%= link_to "product all",  product_images_products_path(), :remote => true %></li>
+                <li><%= link_to "Sign up", new_user_registration_path() %></li>
+                <li><%= link_to "sign_in", new_user_session_path() %></li>
+                <li><%= link_to "confirmation",  new_user_confirmation_path() %></li>
+                <li><%= link_to "students",  new_student_path() %></li>
+              <% end %>
+
+            </ul>
+          </div>
+          <div id="main-navigation">
+            <ul class="wat-cf"></ul>
+          </div>
+        </div>   
+        <div id='product_all'></div>
+        <div id="wrapper" class="wat-cf">
+          <div class="flash">
+            <% flash.each do |type, message| -%>
+              <div class="message <%= type %>">
+                <p><%= message %></p>
+              </div>
+            <% end -%>
+          </div>
+          <div id="main">
+            <%= yield %>
+            <div id="footer">
+              <div class="block">
+                <p>Copyright &copy; <%= Time.now.year %> Web App.</p>
+              </div>      
+            </div>
+          </div>
+          <div id="sidebar">
+            <%= yield :sidebar %>
+          </div>
+        </div>    
+    </div>
+  </body>
 </html>
