--- a/app/views/line_items/_form.html.erb
+++ b/app/views/line_items/_form.html.erb
@@ -19,6 +19,8 @@
     <%= f.label :cart_id %><br>
     <%= f.text_field :cart_id %>
   </div>
+  
+  <%= text_field_tag 'quantity' %>
   <div class="actions">
     <%= f.submit %>
   </div>
