--- a/app/views/products/edit.html.erb
+++ b/app/views/products/edit.html.erb
@@ -1,7 +1,6 @@
 <h1>Editing Product</h1>
 
-   <%= render partial: 'the_comments', locals: { commentable: @product, comments: @comments } %>
 
+<%= render 'form' %>
 
-<%= link_to 'Show', @product %> 
 <%= link_to 'Back', products_path %>
