--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -9,10 +9,21 @@
   <strong>Address:</strong>
   <%= @order.address %>
 </p>
-
+<p>
+<strong>Gender_type:</strong>
+<%= @order.gender_type %>
+</p>
 <p>
   <strong>Email:</strong>
   <%= @order.email %>
+</p>
+<p>
+<strong>Password:</strong>
+<%= @order.password %>
+</p>
+<p>
+<strong>Accno:</strong>
+<%= @order.accno %>
 </p>
 
 <p>
