--- a/app/views/carts/_form.html.erb
+++ b/app/views/carts/_form.html.erb
@@ -18,8 +18,16 @@
     <%= f.label :cart_id %><br>
     <%= f.text_field :cart_id %>
   </div>
-  
+
+  <div class="field">
   <%= text_field_tag 'quantity' %>
+    </div>
+    
+  <div class="field">
+  <%= f.label :unit_price %><br>
+  <%= f.text_field :unit_price %>
+  </div>
+  
   <div class="actions">
     <%= f.submit %>
   </div>
