--- a/app/views/carts/index.html.erb
+++ b/app/views/carts/index.html.erb
@@ -10,16 +10,18 @@
   </thead>
 
   <tbody>
+  <% if @cart.present? %>
     <% @carts.each do |cart| %>
       <tr>
-
         <td><%= link_to 'Show', cart %></td>
         <td><%= link_to 'Edit', edit_cart_path(cart) %></td>
         <td><%= link_to 'Destroy', cart, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
+    <% end %>
     <% end %>
   </tbody>
 </table>
 
 <br>
 
+<%= link_to 'New Cart', new_cart_path %>
