--- a/app/views/orders/_order_all.html.erb
+++ b/app/views/orders/_order_all.html.erb
@@ -8,6 +8,8 @@
       <th>Name</th>
       <th>Address</th>
       <th>Email</th>
+      <th>Password</th>
+      <th>Accno</th>
       <th>Pay type</th>
       <th colspan="3"></th>
     </tr>
@@ -19,6 +21,7 @@
         <td><%= order.name %></td>
         <td><%= order.address %></td>
         <td><%= order.email %></td>
+        <td><%= order.accno %></td>
         <td><%= order.pay_type %></td>
         <td><%= link_to 'Show', order %></td>
         <td><%= link_to 'Edit', edit_order_path(order) %></td>
