--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -7,7 +7,10 @@
     <tr>
       <th>Name</th>
       <th>Address</th>
+      <th>Gender</th>
       <th>Email</th>
+      <th>Password</th>
+      <th>Accno</th>
       <th>Pay type</th>
       <th colspan="3"></th>
     </tr>
@@ -18,7 +21,9 @@
       <tr>
         <td><%= order.name %></td>
         <td><%= order.address %></td>
+        <td><%= order.gender_type %></td>
         <td><%= order.email %></td>
+        <td><%= order.accno %></td>
         <td><%= order.pay_type %></td>
         <td><%= link_to 'Show', order %></td>
         <td><%= link_to 'Edit', edit_order_path(order) %></td>
