--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -3,6 +3,7 @@
 <% end %>
 
 <h2>Your Pragmatic Cart</h2>
+<%= button_to "CONTINUE SHOPPING" , root_path, :method => "get" %>
 <ul>
 <% @cart.line_items.each do |item| %>
 <li><%= item.quantity %> &times; <%= item.product.title %></li>
@@ -25,4 +26,5 @@
  <%= button_to 'Empty cart', @cart, method: :delete, data: { confirm: 'Are you sure?' } %>
 <%= link_to image_tag("https://www.paypal.com/en_US/i/btn/btn_xpressCheckout.gif"),express_order_path %>
 <%= link_to 'Edit', edit_cart_path(@cart) %> 
-<%= link_to 'Back', carts_path %>
+
+
